# Synthia

./: .cpanel.yml  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DISCLAIMER  EDUCATION.md  LICENSE  NOTICE  README.md  SAFETY.md  SCHOOL_TOOL_GOVERNANCE.md  SECURITY.md  SHOWCASE_SUBMISSION.md  docker-compose.yml  pyproject.toml
.antigravity/: marketplace.json  securedme-adapter-map.json  webauth-template.json
.codex/: algoquest-qbit-adapter.json  marketplace.json  securedme-adapter-map.json  webauth-template.json
code/: database.py  lexicon_manager.py
docs/: book2_final_evidence_2026-07-10.md  dmqc_admission_contract.md  independent_neutrosophic_components_kernel.md  multineutrosophic_kernel.md  neutroalgebra_kernel.md  neutrosophic_foundation_kernel.md  neutrosophic_logic_kernel.md  neutrosophic_probability_kernel.md  neutrosophic_random_variables_kernel.md  neutrosophic_set_membership_kernel.md  neutrosophic_statistics_distribution_kernel.md  novak_anderson_phi_pi_governance.md  nss_articles_indexation_for_i_lexicon.md  nss_hub_system_classification_doctrine.md  nss_math_sources_for_synthia.md  plithogenic_arithmetic_kernel.md  plithogenic_hypersoft_kernel.md  plithogenic_logic_kernel.md  plithogenic_probability_statistics_kernel.md  plithogenic_set_kernel.md  single_valued_neutrosophic_kernel.md  symbolic_plithogenic_algebra_kernel.md
frontend/: README.md  index.html  metadata.json  package.json  vite.config.ts
scripts/: publish_public_shell_assets.py
src/: algoquest_qbit_adapter.py
synthia_core/: __init__.py  algorithm_behavior.py  assets.py  (+42 more)
(+127 files in other folders)
